--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.ide.rider": "3.0.13",
     "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.postprocessing": "3.2.2",
     "com.unity.recorder": "3.0.3",
     "com.unity.render-pipelines.universal": "12.1.6",
     "com.unity.test-framework": "1.1.31",
