--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,7 @@ crashlytics-build.properties
 # vs / rider config
 *.vsconfig
 .idea/
+Assets/.DS_Store
+Assets/MetaBomb/.DS_Store
+Assets/MetaBomb/props/.DS_Store
+Assets/MetaBomb/props/3D_Assets/Head_3.obj.meta
